Proof of Concept new search bar

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -23,7 +23,7 @@
         <div class="col-lg-10" id="items">
             <h2 class="page-title">Resources</h2>
             <div class=resource-search>
-                <input class=resource-search-entry></input>
+                <input class=resource-search-entry placeholder="Search..."></input>
                 <ul class=resource-search-items></ul>
                 <ul class=resource-search-options></ul>
             </div>
@@ -85,24 +85,68 @@
             })
         })
 
+        var urlParams;
+        (window.onpopstate = function () {
+            var match,
+                pl     = /\+/g,  // Regex for replacing addition symbol with a space
+                search = /([^&=]+)=?([^&]*)/g,
+                decode = function (s) { return decodeURIComponent(s.replace(pl, " ")); },
+                query  = window.location.search.substring(1);
+
+            urlParams = {};
+            var decoded;
+            while (match = search.exec(query)) {
+                decoded = decode(match[1]);
+                if (typeof urlParams[decoded] === "undefined") {
+                    urlParams[decoded] = [];
+                }
+                urlParams[decoded].push(decode(match[2]));
+            }
+        })();
+
         $.widget("custom.ResourceFilter", {
             options: {
 
             },
 
             _create: function() {
-                this.$input = this.element.find('input');
-                this.$ul = this.element.find('.resource-search-items');
+                var $el = this.element;
+                var $input = this.$input = this.element.find('input');
+                this.$items = this.element.find('.resource-search-items');
                 this.$options = this.element.find('.resource-search-options');
                 this.curOpt = null;
 
-                this.$input.on('keyup', this.scanForItem.bind(this))
+                $input.on('keyup', this.scanForItem.bind(this))
+                $input.on('keydown', function(ev) {
+                    if (ev.keyCode == 40 || ev.keyCode == 38) {
+                        ev.preventDefault();
+                        return false;
+                    } else if (ev.keyCode == 8) {
+                        if ($input[0].selectionStart === 0 && $input[0].selectionEnd === 0) {
+                            $el.ResourceFilter("removeLastItem");
+                            return;
+                        }
+                    }
+                })
 
                 var self = this;
                 this.$options.on('click', '.term-option', function() {
                     var $el = $(this);
                     self.addItem($el.attr('data-label'), $el.text(), $el.attr('data-id'));
+                    self.clearCurrentlyTypingTerm();
+                    self.$input.focus();
+                    self.showOptions();
                 });
+
+                // Find existing search and populate the search field
+                $input.val("");
+                if (typeof urlParams.type !== "undefined") {
+                    for (var i=0; i < urlParams.type.length; i++) {
+                        this.addItem("type", urlParams.type[i], urlParams.type[i]);
+                    }
+                }
+                $input.val(urlParams.text[0]);
+                $input.focus();
 
                 this.setPadding();
             },
@@ -132,40 +176,64 @@
                 });
             },
 
+            // KeyCode Values
+            //
             // 40 UP
             // 38 DOWN
+            // 27 ESCAPE
+            // 13 ENTER
             // 8  BACKSPACE
 
             scanForItem: function(ev) {
                 switch (ev.keyCode) {
-                    case 8:
-                        if (this.$input[0].selectionStart === 0 && this.$input[0].selectionEnd === 0) {
-                            this.removeLastItem();
-                            return;
+                    case 13: // ENTER
+                        var $termOpt = $(".term-option.selected");
+                        if ($termOpt.length > 0) {
+                            $termOpt.click();
+                        } else {
+                            var items = this.getItems();
+                            var textsearch = this.$input.val();
+                            var qs = "";
+
+                            for (var i=0; i < items.length; i++) {
+                                var item = items[i];
+                                if (item.type == "type") {
+                                    qs += "&type=" + item.id;
+                                }
+                            }
+                            qs += "&text=" + textsearch;
+                            window.location.search = qs;
                         }
-                    case 40:
+                    case 40: // UP
                         this.selectDown();
                         break;
-                    case 38:
+                    case 38: // DOWN
                         this.selectUp();
                         break;
-                    default:
-                        // ...
-                }
-                var self = this;
-                var text = this.$input.val();
-                var termPos = text.search(/\w+:\w+ $/);
-                if (termPos >= 0) {
-                    var remaining = text.slice(0, termPos);
-                    var term = text.slice(termPos);
-                    var term_parts = term.split(':');
+                    case 27: // ESCAPE
+                        this.hideOptions();
+                        break;
+                    case 8: // BACKSPACE
+                    default: // While Typing ...
+                        var self = this;
+                        var text = this.$input.val();
+                        var termPos = text.search(/\w+:\w+ $/);
+                        if (termPos >= 0) {
+                            var remaining = text.slice(0, termPos);
+                            var term = text.slice(termPos);
+                            var term_parts = term.split(':');
 
-                    this.$input.val(remaining);
-                    this.addItem(term_parts[0], term_parts[1]);
-                } else {
-                    var current = text.slice(text.search(/\w+$/));
-                    this.searchForTerm(current).then(this.showOptions.bind(this));
+                            this.$input.val(remaining);
+                            this.addItem(term_parts[0], term_parts[1]);
+                        } else {
+                            var current = text.slice(text.search(/\w+$/));
+                            this.searchForTerm(current).then(this.showOptions.bind(this));
+                        }
                 }
+            },
+
+            clearCurrentlyTypingTerm: function() {
+                this.$input.val("");
             },
 
             showOptions: function(options) {
@@ -174,6 +242,10 @@
                 $.each(options, function() {
                     self.addOption(this.label, this.value, this.id);
                 });
+                this.resetSelection();
+            },
+            hideOptions: function() {
+                this.$options.html("");
             },
             addOption: function(type, value, id) {
                 // <li data-label=foo>bar</li>
@@ -202,6 +274,9 @@
                 }
                 this._showSelection();
             },
+            resetSelection: function() {
+                this.curOpt = 0;
+            },
             _showSelection: function() {
                 if (this.curOpt !== null) {
                     this.$options.find('li').removeClass('selected');
@@ -215,19 +290,32 @@
                 $item.attr('data-label', type);
                 $item.attr('data-id', id);
                 $item.text(value);
-                this.$ul.append($item);
+                this.$items.append($item);
 
                 this.setPadding();
             },
 
+            getItems: function() {
+                var items = [];
+                this.$items.find('li').each(function(i, li) {
+                    var $item = $(li);
+                    items.push({
+                        "type": $item.attr('data-label'),
+                        "id": $item.attr('data-id'),
+                        "value": $item.text(),
+                    });
+                });
+                return items;
+            },
+
             removeLastItem: function() {
-                this.$ul.find('li:last-child').remove();
+                this.$items.find('li:last-child').remove();
 
                 this.setPadding();
             },
 
             setPadding: function() {
-                $li = this.$ul.find('li');
+                $li = this.$items.find('li');
                 var width = 0;
                 $li.each(function(){ width += $(this).outerWidth()+5; });
                 this.$input.css('padding-left', width+"px");
