--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -97,12 +97,12 @@
                             {% csrf_token %}
                             <input type="hidden" name="path" value="{{ request.path }}"/>
                             <div class="form-group">
-                                <label for="id_username" class="sr-only">Username: {{request.session.user}}</label>
-                                <input id="id_username" class="form-control" name="username" placeholder="Username" type="text" />
+                                <label for="id_username" class="sr-only">Username: </label>
+                                <input id="id_username" class="form-control" name="username" placeholder="Username" value={% if request.session.remember and request.session.user %}{{request.session.user}}{% else %}""{% endif %} type="text" />
                             </div>
                             <div class="form-group">
                                 <label for="id_password" class="sr-only">Password:</label>
-                                <input id="id_password" class="form-control" name="password" placeholder="Password" type="password" />
+                                <input id="id_password" class="form-control" name="password" placeholder="Password" value={% if request.session.remember and request.session.password %}{{request.session.password}}{% else %}""{% endif %} type="password" />
                             </div>
                             <div class="form-group">
                                 <label for="id_port" class="sr-only">Port:</label>
@@ -110,14 +110,14 @@
                             </div>
                             <div class="form-group">
                                 <label for="id_host" class="sr-only">Host:</label>
-                                <input id="id_host" class="form-control" name="host" placeholder="Host" type="text" />
+                                <input id="id_host" class="form-control" name="host" placeholder="Host" value={% if request.session.remember and request.session.host %}{{request.session.host}}{% else %}""{% endif %} type="text" />
                             </div>
                             <div class="form-group">
                                 <label for="id_zone" class="sr-only">Zone:</label>
-                                <input id="id_zone" class="form-control" name="zone" placeholder="Zone" type="text" />
+                                <input id="id_zone" class="form-control" name="zone" placeholder="Zone" value={% if request.session.remember and request.session.zone %}{{request.session.zone}}{% else %}""{% endif %} type="text" />
                             </div>
                             <label class="checkbox">
-                                <input type="checkbox" />Remember Me
+                                <input type="checkbox" name="remember" {% if request.session.remember %} checked {% endif %}/>Remember Me
                             </label>
                         </div>
                         <div class="modal-footer">
