--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -555,7 +555,7 @@
                 </div>
             </div>
 
-
+            {#        ======= Keywords =======#}
             {% if not metadata_form %}
                 {% if keywords %}
                 <div class="content-block">
@@ -601,7 +601,7 @@
                 </form>
             {% endif %}
 
-
+            {#        ======= Content =======#}
             <div>
                 <h3>Content</h3>
                 <div class="custom-well">
@@ -962,9 +962,6 @@
                     {% endif %}
                     <hr style="border: 0;">
                     {% endif %}
-{#                    {% if spatial_coverage.north or spatial_coverage.northlimit %}#}
-{#                        #}
-{#                    {% endif %}#}
 
                     {% if temporal_coverage %}
                         <h4><strong>Temporal</strong></h4>
