populating mp metadata when the executedby term is changed [#191]

--- a/hs_modelinstance/templates/pages/modelinstanceresource.html
+++ b/hs_modelinstance/templates/pages/modelinstanceresource.html
@@ -63,5 +63,7 @@
     {{ block.super }}
 
     {# resource specific js can go here #}
+    <script src="../../static/js/model_instance.js"></script>
+
 
 {% endblock %}
