--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -48,7 +48,7 @@
     <div id="upload-file">
         <h3>Add your files here:</h3>
         <table class="table" id="file-list">
-        <input type="hidden" name="irods_file_name" value={% if irods_loggedin %} {{ irods_file_name }} {% else %} "" {% endif %}/>
+        <input type="hidden" name="irods_file_name" value={% if request.session.irods_loggedin %} {{ request.session.irods_file_name }} {% else %} "" {% endif %}/>
         <tbody id="files">
             <tr>
                 <td><input type="file" name="files" id="select-file" multiple/></td>
@@ -57,14 +57,18 @@
                 <td><a id="signin-irods"  type="button" class="btn btn-success" data-toggle="modal" data-target="#irodsSignin">
                     <span class="glyphicon glyphicon-plus"><span class="button-label">Sign in iRODS...</span></span>
                 </a>
-                {% if irods_loggedin %}
-                    Signed in as {{ irods_user }}
+                {% if request.session.irods_loggedin %}
+                    Signed in as {{ request.session.user }}
                     <a id="select-irods-file"  type="button" class="btn btn-success" data-toggle="modal" data-target="#irodsContent">
                         <span class="glyphicon glyphicon-plus"><span class="button-label">Browse iRODS...</span></span>
                     </a>
-                    {{ irods_file_name }}
+                    {% if not request.session.irods_file_name %}
+                        No files selected
+                    {% else %}
+                        {{ request.session.irods_file_name }}
+                    {% endif %}
                 {% else %}
-                    {{ login_message }}
+                    {{ request.session.login_message }}
                 {%  endif %}
                 </td>
             </tr>
