[#165] Fixed a bug where referenced time series would display an error page when failing to get size information for a file.   [#165] Fixed minor layout error with model instance resource

--- a/hs_modelinstance/templates/pages/modelinstanceresource.html
+++ b/hs_modelinstance/templates/pages/modelinstanceresource.html
@@ -35,6 +35,7 @@
                     {% endif %}
                 </div>
             </div>
+        </div>
     {%  endif %}
 {%  endblock %}
 {% block extra_js %}
