--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -611,6 +611,7 @@
                     <div class="table-container">
                         <table class="table-plain table-striped">
                             {% for f in cm.files.all %}
+                                {% if f.resource_file %}
                                 {#======= Modal window begins =======#}
                                 <div class="modal fade" id="delete-resource-file-{{ f.pk }}" tabindex="-1" role="dialog"
                                      aria-labelledby="myModalLabel" aria-hidden="true">
@@ -646,23 +647,28 @@
                                     {#                    <td>{% if preview %}<a class="btn btn-info btn-block" href="{{ preview }}">Preview</a>{% endif %}</td>#}
                                     <td>
                                         {% if page.perms.change %}
+
                                             <a href="{{ f.resource_file.url }}"><span data-toggle="modal"
-                                                                                      data-target="#delete-resource-file-{{ f.pk }}"
-                                                                                      data-placement="auto"
-                                                                                      title="Delete"
-                                                                                      class="glyphicon glyphicon-trash icon-button btn-remove"></span></a>
+                                                                                  data-target="#delete-resource-file-{{ f.pk }}"
+                                                                                  data-placement="auto"
+                                                                                  title="Delete"
+                                                                                  class="glyphicon glyphicon-trash icon-button btn-remove"></span></a>
+
                                         {% endif %}
+
                                         <a href="{{ f.resource_file.url }}"><span data-toggle="tooltip"
                                                                                   data-placement="auto" title="Download"
                                                                                   class="glyphicon glyphicon-download icon-button btn-download"></span></a>
-                                        {% if preview %}
-                                            <a href="{{ f.resource_file.url }}"><span data-toggle="tooltip"
+
+                                        {% if preview  %}
+                                            <a href="{{ preview }}"><span data-toggle="tooltip"
                                                                                       data-placement="auto"
                                                                                       title="Preview"
-                                                                                      class="glyphicon glyphicon-eye-open icon-button"></span></a>
+                                                                                            class="glyphicon glyphicon-eye-open icon-button"></span></a>
                                         {% endif %}
                                     </td>
                                 </tr>
+                                {% endif %}
                             {% endfor %}
                         </table>
                     </div>
