--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2184,6 +2184,7 @@
         keyword = keyword.split(",");
 
         for (var i = 0; i < keyword.length; i++){
+            keyword[i] = keyword[i].trim(); // Remove leading and trailing whitespace
             var exists = false;
             // Check if the keyword already exists
             for (var x = 0; x < $("#lst-tags").find(".tag > span").length; x++){
