--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -103,8 +103,8 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 }
 
 #recaptcha_challenge_image{
-    border:1px solid #ddd;
     max-width: 100%;
+    max-height:100%;
 }
 
 #recaptcha_image{
