--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -97,7 +97,12 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
   background-color: #eaeaea;
 }
 
-/* ===== Showcase ===== */
+.navbar-toggle{
+    background: #B5B5B5;
+    border-color: #8C8C8C !important;
+}
+
+/* ===== Recaptcha ===== */
 .fit{
     max-width: 100%;
 }
@@ -131,6 +136,8 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 .recaptcha_image_cell{
     width:50%;
 }
+/* ===== Showcase ===== */
+
 #wrap {
 	/*height: 480px;*/
 	background: url(../img/bg3.jpg);
