--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1340,7 +1340,7 @@ body > .container{
     word-break:break-word;
 }
 
-#btn-download-all, #btn-add-file{
+#btn-download-all, #btn-add-file, #btn-signin-irods, #btn-select-irods-file {
     margin-bottom:5px;
 }
 
