--- a/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
+++ b/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
@@ -88,64 +88,50 @@
                         <h4><strong>SWAT model used parameters:</strong></h4>
                         <hr style="margin-top: 0px;margin-bottom: 2px">
                         <div class="row">
-                            {% if swat_model_parameters.has_crop_rotation %}
-                                <div class="col-sm-4"><strong>Has crop rotation?</strong></div>
-                                {% if swat_model_parameters.has_crop_rotation == True %}
-                                    <div class="col-sm-8">Yes</div>
-                                {% else %}
-                                    <div class="col-sm-8">No</div>
-                                {% endif %}
+                            <div class="col-sm-4"><strong>Has crop rotation?</strong></div>
+                            {% if swat_model_parameters.has_crop_rotation == 1 %}
+                                <div class="col-sm-8">Yes</div>
+                            {% else %}
+                                <div class="col-sm-8">No</div>
                             {% endif %}
-                            {% if swat_model_parameters.has_title_drainage %}
-                                <div class="col-sm-4"><strong>Has title drainage?</strong></div>
-                                {% if swat_model_parameters.has_title_drainage == True %}
-                                    <div class="col-sm-8">Yes</div>
-                                {% else %}
-                                    <div class="col-sm-8">No</div>
-                                {% endif %}
+                            <div class="col-sm-4"><strong>Has title drainage?</strong></div>
+                            {% if swat_model_parameters.has_title_drainage == 1 %}
+                                <div class="col-sm-8">Yes</div>
+                            {% else %}
+                                <div class="col-sm-8">No</div>
                             {% endif %}
-                            {% if swat_model_parameters.has_point_source %}
-                                <div class="col-sm-4"><strong>Has point resource?</strong></div>
-                                {% if swat_model_parameters.has_point_source == True %}
-                                    <div class="col-sm-8">Yes</div>
-                                {% else %}
-                                    <div class="col-sm-8">No</div>
-                                {% endif %}
+                            <div class="col-sm-4"><strong>Has point resource?</strong></div>
+                            {% if swat_model_parameters.has_point_source == 1 %}
+                                <div class="col-sm-8">Yes</div>
+                            {% else %}
+                                <div class="col-sm-8">No</div>
                             {% endif %}
-                            {% if swat_model_parameters.has_fertilizer %}
-                                <div class="col-sm-4"><strong>Has fertilizer?</strong></div>
-                                {% if swat_model_parameters.has_fertilizer == True %}
-                                    <div class="col-sm-8">Yes</div>
-                                {% else %}
-                                    <div class="col-sm-8">No</div>
-                                {% endif %}
+                            <div class="col-sm-4"><strong>Has fertilizer?</strong></div>
+                            {% if swat_model_parameters.has_fertilizer == 1 %}
+                                <div class="col-sm-8">Yes</div>
+                            {% else %}
+                                <div class="col-sm-8">No</div>
                             {% endif %}
-                            {% if swat_model_parameters.has_tillage_operation %}
-                                <div class="col-sm-4"><strong>Has tillage operation?</strong></div>
-                                {% if swat_model_parameters.has_tillage_operation == True %}
-                                    <div class="col-sm-8">Yes</div>
-                                {% else %}
-                                    <div class="col-sm-8">No</div>
-                                {% endif %}
+                            <div class="col-sm-4"><strong>Has tillage operation?</strong></div>
+                            {% if swat_model_parameters.has_tillage_operation == 1 %}
+                                <div class="col-sm-8">Yes</div>
+                            {% else %}
+                                <div class="col-sm-8">No</div>
                             {% endif %}
-                            {% if swat_model_parameters.has_inlet_of_draining_watershed %}
-                                <div class="col-sm-4"><strong>Has inlet of draining watershed?</strong></div>
-                                {% if swat_model_parameters.has_inlet_of_draining_watershed == True %}
-                                    <div class="col-sm-8">Yes</div>
-                                {% else %}
-                                    <div class="col-sm-8">No</div>
-                                {% endif %}
+                            <div class="col-sm-4"><strong>Has inlet of draining watershed?</strong></div>
+                            {% if swat_model_parameters.has_inlet_of_draining_watershed == 1 %}
+                                <div class="col-sm-8">Yes</div>
+                            {% else %}
+                                <div class="col-sm-8">No</div>
                             {% endif %}
-                            {% if swat_model_parameters.has_irrigation_operation %}
-                                <div class="col-sm-4"><strong>Has irrigation operation?</strong></div>
-                                {% if swat_model_parameters.has_irrigation_operation == True %}
-                                    <div class="col-sm-8">Yes</div>
-                                {% else %}
-                                    <div class="col-sm-8">No</div>
-                                {% endif %}
+                            <div class="col-sm-4"><strong>Has irrigation operation?</strong></div>
+                            {% if swat_model_parameters.has_irrigation_operation == 1 %}
+                                <div class="col-sm-8">Yes</div>
+                            {% else %}
+                                <div class="col-sm-8">No</div>
                             {% endif %}
                             {% if swat_model_parameters.has_other_parameters %}
-                                <div class="col-sm-4"><strong>Has other parameters?</strong></div>
+                                <div class="col-sm-4"><strong>Has other parameters:</strong></div>
                                 <div class="col-sm-8">{{ swat_model_parameters.has_other_parameters }}</div>
                             {% endif %}
                         </div>
