--- a/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
+++ b/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
@@ -15,7 +15,7 @@
                         <hr style="margin-top: 0px;margin-bottom: 2px">
                         <div class="row">
                             <div class="col-sm-4"><strong>Includes output files?</strong></div>
-                            {% if model_output.includes_output == True %}
+                            {% if model_output.includes_output %}
                                 <div class="col-sm-8">Yes</div>
                             {% else %}
                                 <div class="col-sm-8">No</div>
@@ -89,43 +89,43 @@
                         <hr style="margin-top: 0px;margin-bottom: 2px">
                         <div class="row">
                             <div class="col-sm-4"><strong>Has crop rotation?</strong></div>
-                            {% if swat_model_parameters.has_crop_rotation == 1 %}
+                            {% if swat_model_parameters.has_crop_rotation %}
                                 <div class="col-sm-8">Yes</div>
                             {% else %}
                                 <div class="col-sm-8">No</div>
                             {% endif %}
                             <div class="col-sm-4"><strong>Has title drainage?</strong></div>
-                            {% if swat_model_parameters.has_title_drainage == 1 %}
+                            {% if swat_model_parameters.has_title_drainage %}
                                 <div class="col-sm-8">Yes</div>
                             {% else %}
                                 <div class="col-sm-8">No</div>
                             {% endif %}
                             <div class="col-sm-4"><strong>Has point resource?</strong></div>
-                            {% if swat_model_parameters.has_point_source == 1 %}
+                            {% if swat_model_parameters.has_point_source %}
                                 <div class="col-sm-8">Yes</div>
                             {% else %}
                                 <div class="col-sm-8">No</div>
                             {% endif %}
                             <div class="col-sm-4"><strong>Has fertilizer?</strong></div>
-                            {% if swat_model_parameters.has_fertilizer == 1 %}
+                            {% if swat_model_parameters.has_fertilizer %}
                                 <div class="col-sm-8">Yes</div>
                             {% else %}
                                 <div class="col-sm-8">No</div>
                             {% endif %}
                             <div class="col-sm-4"><strong>Has tillage operation?</strong></div>
-                            {% if swat_model_parameters.has_tillage_operation == 1 %}
+                            {% if swat_model_parameters.has_tillage_operation %}
                                 <div class="col-sm-8">Yes</div>
                             {% else %}
                                 <div class="col-sm-8">No</div>
                             {% endif %}
                             <div class="col-sm-4"><strong>Has inlet of draining watershed?</strong></div>
-                            {% if swat_model_parameters.has_inlet_of_draining_watershed == 1 %}
+                            {% if swat_model_parameters.has_inlet_of_draining_watershed %}
                                 <div class="col-sm-8">Yes</div>
                             {% else %}
                                 <div class="col-sm-8">No</div>
                             {% endif %}
                             <div class="col-sm-4"><strong>Has irrigation operation?</strong></div>
-                            {% if swat_model_parameters.has_irrigation_operation == 1 %}
+                            {% if swat_model_parameters.has_irrigation_operation %}
                                 <div class="col-sm-8">Yes</div>
                             {% else %}
                                 <div class="col-sm-8">No</div>
