--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -477,14 +477,12 @@
                         <a id="btn-signin-irods"  type="button" class="btn btn-success" data-toggle="modal" data-target="#irodsSignin">
                             <span class="glyphicon glyphicon-plus"><span class="button-label">Sign in iRODS...</span></span>
                         </a>
-                        {% if request.session.irods_loggedin %}
-                            Signed in as {{ request.session.user }}
-                            <a id="btn-select-irods-file"  type="button" class="btn btn-success" data-toggle="modal" data-target="#irodsContent">
-                                <span class="glyphicon glyphicon-plus"><span class="button-label">Add file from iRODS...</span></span>
-                            </a>
-                        {% else %}
-                            {{ request.session.login_message }}
-                        {%  endif %}
+
+                        <span id="sign-in-info">{% if request.session.irods_loggedin %}Signed in as {{ request.session.user }}{% endif %}</span>
+                        <a id="btn-select-irods-file"  type="button" class="btn btn-success" data-toggle="modal" data-target="#irodsContent" {% if not request.session.irods_loggedin %}style="display:none;"{% endif %}>
+                            <span class="glyphicon glyphicon-plus"><span class="button-label">Add file from iRODS...</span></span>
+                        </a>
+
                     {% endif %}
                 </div>
             </div>
@@ -777,7 +775,8 @@
 
         <!-- Modal -->
         {%  block modal %}
-            {% include "irods.html" %}
+            {% include "irods_signin.html" %}
+            {% include "irods_upload_add.html" %}
             {%  block modal_publish_resource %}
                 <div class="modal fade" id="submit-for-publication-dialog" tabindex="-1" role="dialog"
                      aria-labelledby="myModalLabel" aria-hidden="true">
